--- a/src/app/components/hobies/hobies.component.html
+++ b/src/app/components/hobies/hobies.component.html
@@ -33,7 +33,7 @@
             <div class="content-foto-info">
                 <div class="info">
                     <div class="info-head">
-                        <span id="content-icon-guitar"><img id="icon-sport" ></span>
+                        <span id="content-icon-guitar"><img src="https://cdn-icons-png.flaticon.com/512/1099/1099672.png" ></span>
                         <Span class="title-company" translate="no">Deporte</Span>
                     </div>
 
@@ -41,15 +41,15 @@
                     <div class="content-datos-descrip">
                         <div class="datos">
 
-                            <span class="desc-content">
-                            <i id="check" class="bi bi-check"></i>
-                            <Span class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd
+                            <div class="desc-content">
+                            <i id="check" class="bi bi-check"> Jugar al Futbol</i>
+                            <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd
                                 Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
                                 Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
                                 Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
                                 
-                            </Span>
-                            </span>
+                            </div>
+                        </div>
 
 
                         </div>
@@ -71,15 +71,15 @@
                     <div class="content-datos-descrip">
                         <div class="datos">
 
-                            <span class="desc-content">
-                            <i id="check" class="bi bi-check"></i>
-                            <Span class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd
+                            <div class="desc-content">
+                            <i id="check" class="bi bi-check">Fitness</i>
+                            <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd
                                 Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
                                 Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
                                 Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
                                 
-                            </Span>
-                            </span>
+                            </div>
+                        </div>
 
 
                         </div>
