--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -591,12 +591,12 @@
                     margin: 10px;
                     display: grid;
                 }
-                .habilidades {
-                    width: 93%;
+                .habilidades{
+                    width: 100%;
                     height: 300px;
                     box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.151);
                     border-radius: 10px;
-                    margin: 5% auto 0px auto;
+                    margin: 10% auto 0px auto !important;
                     padding: 10px 0px 10px 0px;
                     justify-content: center;
                 }
