Mejoras home, experiencia, hobies

--- a/src/app/components/hobies/hobies.component.html
+++ b/src/app/components/hobies/hobies.component.html
@@ -42,14 +42,12 @@
                         <div class="datos">
 
                             <div class="desc-content">
-                            <i id="check" class="bi bi-check"> Jugar al Futbol</i>
-                            <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd
-                                Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
-                                Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
-                                Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
-                                
+                                <i id="check" class="bi bi-check"> Jugar al Futbol</i>
+                                <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion
+                                    de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
+
+                                </div>
                             </div>
-                        </div>
 
 
                         </div>
@@ -72,14 +70,12 @@
                         <div class="datos">
 
                             <div class="desc-content">
-                            <i id="check" class="bi bi-check">Fitness</i>
-                            <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd
-                                Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
-                                Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
-                                Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
-                                
+                                <i id="check" class="bi bi-check">Fitness</i>
+                                <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion
+                                    de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
+
+                                </div>
                             </div>
-                        </div>
 
 
                         </div>
@@ -87,15 +83,70 @@
                 </div>
             </div>
         </div>
+
+        <div class="habilidades">
+            <div class="content-foto-info">
+                <div class="info">
+                    <div class="info-head">
+                        <span id="content-icon-guitar"><img id="icon-guitar" ></span>
+                        <Span class="title-company" translate="no"> Arte</Span>
+                    </div>
+
+                    <hr class="separador-info">
+                    <div class="content-datos-descrip">
+                        <div class="datos">
+
+                            <div class="desc-content">
+                                <i id="check" class="bi bi-check">Fitness</i>
+                                <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion
+                                    de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
+
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="habilidades">
+            <div class="content-foto-info">
+                <div class="info">
+                    <div class="info-head">
+                        <span id="content-icon-guitar"><img id="icon-guitar" ></span>
+                        <Span class="title-company" translate="no"> Arte</Span>
+                    </div>
+
+                    <hr class="separador-info">
+                    <div class="content-datos-descrip">
+                        <div class="datos">
+
+                            <div class="desc-content">
+                                <i id="check" class="bi bi-check">Fitness</i>
+                                <div class="desc-detail">Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgfdgfd Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf Actuslizacion
+                                    de base de datos usando Oracle gfdgfdgfdgfdgdfgfdgfdgf
+
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
 
 
-
+    <!--
     <div class="btn-whatsapp">
         <a href="https://wa.link/uul15g" target="_blank"><i id="i-whatsapp" class="bi bi-whatsapp"></i></a>
-    </div>
+    </div>-->
 
     <script>
         $(document).ready(function() {
