--- a/src/app/components/hobies/hobies.component.css
+++ b/src/app/components/hobies/hobies.component.css
@@ -596,6 +596,10 @@
     }
     
     @media screen and (max-width:450px) {
+        #main {
+            margin: auto;
+            padding: 10px;
+        }
         ul li {
             width: 100%;
             padding: 16px;
@@ -614,10 +618,10 @@
             display: block;
             padding: 0px;
         }
-        .habilidades{
+        .habilidades {
             width: 100%;
             height: 100%;
-           /* box-shadow: 0px 3px 10px 3px rgb(0 0 0 / 80%) !important;*/
+            /* box-shadow: 0px 3px 10px 3px rgb(0 0 0 / 80%) !important;*/
             border-radius: 10px;
             margin: 10% auto 5% auto !important;
             padding: 10px 0px 10px 0px;
@@ -629,7 +633,6 @@
             width: 100% !important;
             height: 200px;
         }
-
         #content-icon-guitar {
             display: inline-block;
             width: 60px;
@@ -679,7 +682,7 @@
             display: block;
             height: 100%;
         }
-        .content-datos-descrip{
+        .content-datos-descrip {
             margin: 18px 0px 0px 0px;
             padding: 0;
             display: flex;
@@ -709,8 +712,7 @@
             height: 80px;
             text-align: center;
         }
-
-        .info  span{
+        .info span {
             color: rgb(255 255 255) !important;
             margin: 0 0 0 0 !important;
         }
@@ -748,8 +750,7 @@
             width: 40px !important;
             border: none;
         }
-       .desc-detail{
-           color: rgb(255, 255, 255);
-       }
-
+        .desc-detail {
+            color: rgb(255, 255, 255);
+        }
     }
