--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -45,6 +45,9 @@ body {
         border-radius: 2px;
         cursor: pointer;
     }
+    #btn-sobre-mi:hover {
+        background: #44a7ee;
+    }
     #master {
         margin: 0px;
         width: 100%;
@@ -478,7 +481,7 @@ body {
         height: 100px;
         border-radius: 300px;
         /*background-color: rgb(56 178 249);*/
-        background-color: rgb(237 118 61);
+        background-color: rgb(229 95 31);
         animation-name: btn;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -693,7 +696,7 @@ body {
         width: 60px;
         height: 60px;
         border-radius: 300px;
-        background-color: rgb(237 118 61);
+        background-color: rgb(229 95 31);
         animation-name: btn;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -977,7 +980,7 @@ body {
         width: 60px;
         height: 60px;
         border-radius: 300px;
-        background-color: rgb(237 118 61);
+        background-color: rgb(229 95 31);
         animation-name: btn;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -988,6 +991,10 @@ body {
 }
 
 @media screen and (max-width: 450px) {
+    .nombre p {
+        color: #ffffff;
+        text-shadow: 0px 4px 8px #000000e3;
+    }
     #master {
         margin: 0px;
         width: 100%;
@@ -1162,7 +1169,7 @@ body {
         width: 65px;
         height: 65px;
         border-radius: 300px;
-        background-color: rgb(237 118 61);
+        background-color: rgb(229 95 31);
         position: fixed;
         z-index: 8;
     }
@@ -1269,6 +1276,20 @@ body {
     }
     .conten-btn-sobre {
         font-size: 10px;
+    }
+    #btn-sobre-mi {
+        border: none;
+        margin-top: 15px;
+        color: white;
+        background: #2297ec;
+        padding: 5px 10px 5px 10px;
+        border-radius: 2px;
+        cursor: pointer;
+        width: 80px;
+        height: 27px;
+    }
+    #btn-sobre-mi:hover {
+        background: #44a7ee;
     }
 }
 
@@ -1425,6 +1446,6 @@ body {
         width: 60px;
         height: 60px;
         border-radius: 300px;
-        background-color: rgb(237 118 61);
+        background-color: rgb(229 95 31);
     }
 }
