--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="info">
                     <div class="info-head">
-                        <Span class="nombre" translate="no ">Mi nombres es <strong>FRANCIS</strong></Span>
+                        <Span class="nombre" translate="no "><p> Mi nombres es FRANCIS </p></Span>
                         <Span class="profesion" translate="yes">Soy Desarrollador</Span>
                         <Span class="conten-btn-sobre" translate="yes "><button id="btn-sobre-mi" (click)="mostrarModal()">Sobre mi</button></Span>
                     </div>
