--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -995,11 +995,16 @@ body {
         color: #ffffff;
         text-shadow: 0px 4px 8px #000000e3;
     }
+    .hola {
+        color: #009ef7 !important;
+        font-size: 20px;
+        margin: 0px;
+    }
     #master {
         margin: 0px;
         width: 100%;
         height: 100%;
-        /*padding: 110px 10px 0px 10px;*/
+        padding: 65px 0px 0px 0px;
     }
     ul li {
         width: 100%;
@@ -1032,7 +1037,7 @@ body {
         justify-content: center;
     }
     .content-foto {
-        display: inline-block;
+        display: inline;
         width: 100% !important;
         height: 200px;
     }
@@ -1127,7 +1132,7 @@ body {
     }
     .content-datos-descrip {
         margin: auto;
-        padding: 10px !important;
+        padding: 65px 10px 10px 10px !important;
         justify-content: center;
         display: grid;
     }
@@ -1165,7 +1170,7 @@ body {
     }
     .btn-whatsapp {
         right: 8px;
-        bottom: 30px;
+        bottom: 50px;
         width: 65px;
         height: 65px;
         border-radius: 300px;
