--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,6 +10,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <meta name="description" content="Desarrollador - Ggiulios Francis Mendoza Chavez –
+     Estudiante de la Universidad tecnológica del Perú - conocimientos en tecnologías web. 
+     java, java script, ORACLE, SQL SERVER, Metodología Scrum.">
 
     <!-- Google Tag Manager -->
     <script>
