--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -16,8 +16,9 @@
         margin: auto;
         align-items: center;
         justify-content: center;
-        color: #666666;
+        color: #404040;
         font-weight: 100;
+        font-size: 10px;
     }
     .social a {
         text-decoration: none;
