--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -36,6 +36,9 @@ body {
 /*media 1920*/
 
 @media screen and (max-width: 1920px) {
+
+
+
     #btn-sobre-mi {
         border: none;
         margin-top: 15px;
@@ -48,11 +51,11 @@ body {
     #btn-sobre-mi:hover {
         background: #44a7ee;
     }
-    #master {
+    #master{
         margin: 0px;
         width: 100%;
         height: 100%;
-        padding: 80px 40px 0px 40px;
+        padding: 65px 15px 0px 15px;
     }
     .loading {
         color: #f8f8f8;
@@ -72,19 +75,16 @@ body {
         padding-top: 20%;
         z-index: 10;
     }
-    #sobremi-content {
+    #sobremi-content{
         position: fixed;
         background-color: #1a1a1a54;
         width: 100%;
-        /* justify-content: center; */
-        /* align-items: center; */
-        /* padding-top: 20%; */
         z-index: 10;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100%;
-        padding: initial;
+        padding: 100px 0px 0px 0px!important;
     }
     #detail-sobremi-content {
         width: 880px;
@@ -106,6 +106,12 @@ body {
         color: white;
         font-size: 13px;
         display: inline-block;
+    }
+
+    .hola {
+        color: #009ef7 !important;
+        font-size: 20px;
+        margin: 0px;
     }
     #sobremi-title {
         color: #00b8ff;
@@ -149,8 +155,7 @@ body {
     .habilidades {
         width: auto;
         height: auto;
-        /* border-radius: 10px; */
-        padding: 120px;
+        padding: 20px 120px 90px 120px;
         justify-content: center;
         background: #1a1a1ad9;
         margin: 20px;
@@ -213,7 +218,7 @@ body {
         padding: 20px;
         display: flex;
         align-items: center;
-        background: #0e0e0e;
+        background: #191919;
         border-radius: 0px 100px 100px 10px;
         animation-name: efect;
         animation-duration: 1s;
@@ -243,6 +248,10 @@ body {
     .info-head {
         width: 100%;
         margin-left: 90px;
+    }
+
+    .info-head span p{
+        margin: 0px;
     }
     .saludo {
         display: block;
@@ -476,7 +485,7 @@ body {
         justify-content: center;
         align-items: center;
         right: 50px;
-        bottom: 60px;
+        bottom: 10px;
         width: 100px;
         height: 100px;
         border-radius: 300px;
@@ -574,9 +583,10 @@ body {
         padding: 10px 0px 20px 0px;
         background-color: #1a1a1ad9 !important;
         border-radius: 15px;
+        display: grid;
     }
-    .content-foto {
-        display: flex;
+    .content-foto{
+        display: initial;
         width: auto !important;
         height: 300px;
     }
@@ -615,19 +625,22 @@ body {
             /* background-size: 110% 110%;*/
         }
     }
-    .foto {
-        width: 100%;
-        height: 100%;
+
+    .foto{
+        width: 200px;
+        height: 200px;
         margin: auto;
         display: flex !important;
-        padding: 20px;
+        /* padding: 20px; */
+        background: #c3c3c3;
     }
+
     .info-head {
         width: 100%;
         height: 130px;
         text-align: center;
-        /* padding: 15px;*/
-    }
+        margin: auto;
+}
     .saludo {
         display: block;
         font-size: 30px;
@@ -635,6 +648,22 @@ body {
         color: rgb(25, 143, 221) !important;
         margin: 15px !important;
         font-weight: 800;
+    }
+
+
+    .info {
+        width: 100%;
+        height: 200px;
+        margin: auto;
+        padding: 20px !important;
+        display: flex;
+        align-items: center;
+        background: #19191900;
+        border-radius: 0px 100px 100px 10px;
+        animation-name: efect;
+        animation-duration: 1s;
+        animation-direction: alternate;
+        animation-delay: 2s;
     }
     .info span {
         color: rgb(255, 255, 255);
@@ -662,12 +691,10 @@ body {
         font-size: 14px;
     }
     .descrip span {
-        font-size: 14px;
+        font-size: 9px;
     }
-    .content-foto-info {
-        /* margin: 30px;*/
-        display: block;
-        /* height: auto;*/
+    .content-foto-info{
+        display: inline-block;
     }
     .content-datos-descrip {
         margin: auto;
@@ -703,6 +730,11 @@ body {
         animation-direction: alternate;
         animation-delay: 0s;
         z-index: 5;
+    }
+
+    .blok-content{
+        width: 220px;
+        height: 70px;
     }
     #footer {
         position: absolute;
@@ -1041,7 +1073,8 @@ body {
         width: 100% !important;
         height: 200px;
     }
-    #img{
+
+    #img {
         background: url(/assets/MiAvatar.png);
         background-size: 200px 200px;
         background-repeat: no-repeat;
@@ -1050,8 +1083,7 @@ body {
         width: 100% !important;
         height: 100% !important;
         border-radius: 300px;
-        box-shadow: 0px 10px 10px rgba(79, 89, 236, 0.178);
-        /* margin: auto; */
+        box-shadow: 0px 10px 10px rgb(13 13 13 / 62%);
         z-index: 1;
     }
     .blok-content {
@@ -1065,19 +1097,21 @@ body {
         box-shadow: -3px 5px 10px rgb(6 6 6 / 18%);
         border-radius: 3px;
     }
+
+
     .foto {
         width: 200px;
         height: 200px;
-        margin: auto;
+        margin: auto !important;
         display: flex !important;
         padding: 0px;
+
     }
-    .info-head {
+
+    .info-head{
         width: 100%;
-        height: 130px;
+        height: 80px;
         text-align: center;
-        display: block;
-        margin: 0px !important;
     }
     .saludo {
         display: block;
@@ -1130,9 +1164,9 @@ body {
         display: block;
         height: 50%;
     }
-    .content-datos-descrip {
+    .content-datos-descrip{
         margin: auto;
-        padding: 65px 10px 10px 10px !important;
+        padding: 10px 10px 10px 10px !important;
         justify-content: center;
         display: grid;
     }
