add: mejoras habilidades

--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -26,19 +26,25 @@
 
                 <!--<hr class="separador-info">-->
                 <div class="content-datos-descrip">
-                    <div class="datos">
-
-                        <span class="desc-content-name">
-                            <span id="i-java"> </span>
-                            <Span class="desc-detail">Java</Span>
-                        </span>
-                        <span class="desc-content">
-                            <div class="base-porcentaje">
-                                <Span class="barra-one"></Span>
-                            </div>
-                        </span>
+                    <div class="content-stack">
+                        <span id="h-stack">Backend</span>
+                        <div class="datos">
+                            <span class="desc-content-name">
+                                <span id="i-java"> </span>
+                                <Span class="desc-detail">Java</Span>
+                            </span>
+                            <span class="desc-content">
+                                <div class="base-porcentaje">
+                                    <Span class="barra-one"></Span>
+                                </div>
+                            </span>
+                        </div>
                     </div>
-                    <div class="datos">
+
+
+                    <div class="content-stack">
+                        <span id="h-stack">Fronend</span>
+                      <div class="datos">
                         <span class="desc-content-name">
                             <span id="i-html"> </span>
                             <Span class="desc-detail">HTML</Span>
@@ -49,9 +55,27 @@
                             </div>
                         </span>
                     </div>
+
                     <div class="datos">
                         <span class="desc-content-name">
                             <Span class="desc-detail">Java</Span>
+                        </span>
+                        <span class="desc-content">
+                            <div class="base-porcentaje">
+                                <Span class="barra-one"></Span>
+                            </div>
+                        </span>
+                    </div>
+
+                    </div>
+                  
+                    
+                    <div class="content-stack">
+                        <span id="h-stack">Data Base</span>
+                      <div class="datos">
+                        <span class="desc-content-name">
+                            <span id="i-html"> </span>
+                            <Span class="desc-detail">HTML</Span>
                         </span>
                         <span class="desc-content">
                             <div class="base-porcentaje">
@@ -71,29 +95,10 @@
                         </span>
                     </div>
 
-
-                    <div class="datos">
-                        <span class="desc-content-name">
-                            <Span class="desc-detail">Java</Span>
-                        </span>
-                        <span class="desc-content">
-                            <div class="base-porcentaje">
-                                <Span class="barra-one"></Span>
-                            </div>
-                        </span>
                     </div>
+                  
 
-                    <div class="datos">
-                        <span class="desc-content-name">
-                            <Span class="desc-detail">Java</Span>
-                        </span>
-                        <span class="desc-content">
-                            <div class="base-porcentaje">
-                                <Span class="barra-one"></Span>
-                            </div>
-                        </span>
-                    </div>
-
+                    
 
 
                 </div>
