--- a/src/app/components/habilidades/habilidades.component.css
+++ b/src/app/components/habilidades/habilidades.component.css
@@ -75,12 +75,12 @@
                     width: auto;
                     height: 400px;
                     margin: auto auto auto auto;
-                    display: block;
+                    display: table-row;
                     padding: 50px;
                 }
                 .info-head {
                     width: 100%;
-                    height: 30px;
+                    height: 100%;
                     text-align: center;
                 }
                 .title-company {
@@ -360,6 +360,19 @@
                     font-size: 30px;
                     display: inline-block;
                     margin-right: 5px;
+                }
+
+                .content-stack {
+                    background: #202020;
+                    padding: initial;
+                    margin: 10px;
+                }
+
+                #h-stack{
+                    display: block;
+                    color: aliceblue;
+                    font-size: 20px;
+                    padding: 20px 0px 10px 30px;
                 }
             }
             
