--- a/src/app/components/habilidades/habilidades.component.css
+++ b/src/app/components/habilidades/habilidades.component.css
@@ -36,9 +36,10 @@
                     z-index: 2;
                 }
                 .content-foto-info {
-                    margin: 30px;
+                    margin: auto;
                     display: block;
-                    height: 400px;
+                    height: auto;
+                    padding: 40px;
                 }
                 .habilidades {
                     width: 95%;
@@ -72,10 +73,10 @@
                     font-weight: 100;
                 }
                 .info {
-                    width: auto;
+                    width: 100%;
                     height: 400px;
                     margin: auto auto auto auto;
-                    display: table-row;
+                    display: contents;
                     padding: 50px;
                 }
                 .info-head {
